# LinuxAppManager

./: CHANGELOG.md  Cargo.toml  README.md  official-config.json
.cargo/: config.toml
data/: com.procomputation.LinuxAppManager.desktop
scripts/: build-appimage.sh  install-timer.sh  install.sh
src/: backends.rs  catalog.rs  config.rs  main.rs  model.rs  sources.rs
systemd/: linux-app-manager-update.service  linux-app-manager-update.timer
