[package]
name = "linux-app-manager"
version = "0.1.4"
edition = "2021"
description = "A private sideload/catalog manager for your own Linux apps"
license = "MIT"

[[bin]]
name = "linux-app-manager"
path = "src/main.rs"

[dependencies]
# Keep gtk4 + libadwaita on the same glib generation (0.20), same as the
# gapless player. Feature flags gate to Ubuntu 24.04's GTK 4.14 / libadwaita 1.5.
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"

async-channel = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# Blocking HTTP (rustls) — no openssl, no tokio. json feature for into_json().
ureq = { version = "2", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
